--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 commit = True
 current_version = 0.0.0
-files = bottle-peewee/__init__.py
+files = bottle_peewee.py
 tag = True
 tag_name = {new_version}
